1.0
----------
* A RuntimeException is now thrown if a fitness function attempts to
  return a non-positive fitness value.
* Fixed a bug in the WeightedRouletteSelector that, under certain
  circumstances, resulted in a fatal "logic error" exception.
* Updated the sample fitness function to ensure that it never
  returns a non-positive fitness value.

1.0-RC2
----------
* Added new BulkFitnessFunction class, which can be used to create
  fitness functions that evaluate an entire working pool of chromosomes
  all at once.
* Fixed hashCode() in Chromosome class so that it is no longer dependent
  on the fitness function.
* Java serialization of Genotypes and Chromosomes is now working properly.
* Added a FAQ document.
* Updated various documentation.
* Updated the README file. 


1.0-RC1
----------
* Added new document on using the XMLManager to marshall populations
  into XML representations that can be used for persistence, transmission,
  etc.
* Renamed Allele class to Gene class and updated all of the source files
  accordingly to fix source and documentation.
* Renamed Gene.setValue() and Gene.getValue() methods to Gene.setAllele()
  and Gene.getAllele(), respectively.
* Renamed IntegerAllele to IntegerGene, BooleanAllele to BooleanGene,
  and AlleleCreationException to GeneCreationException.
* Removed the MakeChange.java and MakeChangeFitnessFunction.java files
  from the examples directory, as they added very little value given
  the presence of the MinimizingMakeChange.java and 
  MinimizingMakeChangeFitnessFunction.java files.
* Fixed default constructor in IntegerGene so that it will no longer
  result in an ArithmeticException.
* Fixed compareTo() method in IntegerGene.
* Added hashCode() method to IntegerGene and BooleanGene.
* Made various other minor fixes.
* Removed the TestGenetics and TestXML examples.
* Updated introductory documentation.
* Updated various javadocs to increase clarity and accuracy.
* Updated the README file.


0.32
----------